<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShopSmart</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in">SignIn</string>

    <!-- Sign In -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>

    <!-- Employee Menu -->
    <string name="staffhours">Staff Hours</string>
    <string name="manage">Manage</string>
    <string name="updatestock">Stock List</string>
    <string name="rota">Rota</string>
    <string name="messages">Requests</string>
    <string name="changeprice">Change Price</string>
    <string name="title_activity_employee_menu">EmployeeMenu</string>
    <string name="title_activity_shopping_list">ShoppingList</string>
    <string name="title_activity_spending">Spending</string>
    <string name="title_activity_barcode_scan">Barcode Scaner</string>
    <string name="app_name1">Barcode Scaner</string>
    <string name="title_activity_search">Search</string>
    <string name="title_staffhours">StaffHours</string>
    <string name="title_activity_rota">Rota</string>
    <string name="day">Day</string>
    <string name="fruit">Fruit+Veg</string>

    <string-array name="days_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="days_arrayR">
        <item></item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
        <item>All Days</item>
    </string-array>
    <string-array name="days_array1">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
    <string-array name="users_array">
        <item>John</item>
        <item>Ian</item>
        <item>Aishling</item>
        <item>Sarah</item>
    </string-array>
    <string-array name="users_arrayR">
        <item></item>
        <item>John</item>
        <item>Ian</item>
        <item>Aishling</item>
        <item>Sarah</item>
    </string-array>
    <string-array name="shifts_arrayR">
        <item></item>
        <item>9-6</item>
        <item>11-8</item>
        <item>1-10</item>
    </string-array>
    <string-array name="delivery_array">
        <item>Fruit+Veg</item>
        <item>Dairy</item>
        <item>Frozen</item>
        <item>Minerals</item>
        <item>Alcohol</item>
        <item>Clear All</item>
    </string-array>
    <string-array name="operations_array">
        <item>Tills</item>
        <item>Deli</item>
        <item>Stock</item>
        <item>Store</item>
    </string-array>

    <string name="title_activity_custom_on_item_selected_listener">CustomOnItemSelectedListener</string>
    <string name="title_activity_pricing">Pricing</string>
    <string name="title_activity_update_stock">UpdateStock</string>
    <string name="title_activity_manage">Manage</string>
    <string name="title_activity_special_offers">SpecialOffers</string>
    <string name="title_activity_image_adapter">ImageAdapter</string>
    <string name="title_activity_request">Request</string>
    <string name="title_activity_view_requests">ViewRequests</string>

</resources>