<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fyp.shopsmart.customer.MainActivity" >

  <Button
      android:id="@+id/staffhours"
      android:layout_width="200dp"
      android:layout_height="60dp"
      android:layout_alignParentTop="true"
      android:layout_marginTop="30dp"
      android:layout_centerHorizontal="true"
      android:background="@drawable/custombutton"
      android:text="@string/staffhours"
      android:textColor="#FFFFFF"
      android:textSize="30sp" />
  
   <Button
      android:id="@+id/button2"
      android:layout_width="200dp"
      android:layout_height="60dp"
      android:layout_centerHorizontal="true"
      android:layout_below="@+id/staffhours"
      android:layout_marginTop="15dp"
      android:background="@drawable/custombutton"
      android:text="@string/updatestock"
      android:textColor="#FFFFFF"
      android:textSize="30sp" />
   
      <Button
      android:id="@+id/button3"
      android:layout_width="200dp"
      android:layout_height="60dp"
      android:layout_centerHorizontal="true"
      android:layout_below="@+id/button2"
      android:layout_marginTop="15dp"
      android:background="@drawable/custombutton"
      android:text="@string/manage"
      android:textColor="#FFFFFF"
      android:textSize="30sp" />
      
       <Button
      android:id="@+id/button4"
      android:layout_width="200dp"
      android:layout_height="60dp"
      android:layout_centerHorizontal="true"
      android:layout_below="@+id/button3"
      android:layout_marginTop="15dp"
      android:background="@drawable/custombutton"
      android:text="@string/changeprice"
      android:textColor="#FFFFFF"
      android:textSize="30sp" />
       
       
       
        <Button
      android:id="@+id/rota"
      android:layout_width="200dp"
      android:layout_height="60dp"
      android:layout_centerHorizontal="true"
      android:layout_below="@+id/button4"
      android:layout_marginTop="15dp"
      android:background="@drawable/custombutton"
      android:text="@string/rota"
      android:textColor="#FFFFFF"
      android:textSize="30sp" />
        
        <Button
      android:id="@+id/signIn"
      android:layout_width="200dp"
      android:layout_height="60dp"
      android:layout_centerHorizontal="true"
      android:layout_below="@+id/rota"
      android:layout_marginTop="15dp"
      android:background="@drawable/custombutton"
      android:text="@string/messages"
      android:textColor="#FFFFFF"
      android:textSize="30sp" />
   
   
   

</RelativeLayout>
