<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fyp.shopsmart.customer.SignIn" >
    
    
     <TextView
      android:id="@+id/textView1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_marginTop="170dp"
      android:text="@string/username"
      android:textAppearance="?android:attr/textAppearanceLarge" />

   

    <EditText
	  android:id="@+id/editText1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="162dp"
      android:layout_marginLeft="35dp"
      android:layout_toRightOf="@+id/textView1"
      android:ems="10" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1" 
        android:layout_marginTop="40dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <EditText
	  android:id="@+id/editText2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/editText1" 
      android:layout_marginTop="30dp"
       android:layout_marginLeft="35dp"
      android:layout_toRightOf="@+id/textView2"
      android:ems="10" />

    
    
     
     
       <Button
      android:id="@+id/signIn"
      android:layout_width="130dp"
      android:layout_height="50dp"
      android:layout_centerHorizontal="true"
      android:layout_below="@+id/editText2"
      android:layout_marginTop="30dp"
      android:background="@drawable/custombutton"
      android:text="@string/signin"
      android:textColor="#FFFFFF"
      android:textSize="30sp" />

       <TextView
           android:id="@+id/textView3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/signIn"
           android:layout_alignParentTop="true"
           android:layout_marginTop="25dp"
           android:text="@string/app_name"
           android:textAppearance="?android:attr/textAppearanceLarge" />

       <TextView
           android:id="@+id/textView4"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/textView3"
           android:layout_below="@+id/textView3"
           android:layout_marginTop="44dp"
             android:text="@string/signin"
           android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
